[gd_scene load_steps=14 format=3 uid="uid://cykkbk3sjbrw3"]

[ext_resource type="Script" uid="uid://dnddc18a2aft7" path="res://scripts/player/PlayerController.gd" id="1_16aah"]
[ext_resource type="Script" uid="uid://b5lpfcdr0telh" path="res://scripts/interaction/InteractionManager.gd" id="2_ljt2q"]
[ext_resource type="PackedScene" uid="uid://b7w7kf7jqkphu" path="res://assets/meshes/farmer.glb" id="2_msfty"]
[ext_resource type="PackedScene" uid="uid://xbimmd14id3y" path="res://scenes/ui/InteractionFeedback.tscn" id="3_sxwei"]
[ext_resource type="PackedScene" uid="uid://3ypmhllqy7ns" path="res://scenes/ui/TileHighlighter.tscn" id="4_pfgso"]
[ext_resource type="Script" uid="uid://d0aq0be0uu8r8" path="res://scripts/player/PlayerMovement.gd" id="5_ju8ue"]
[ext_resource type="Script" uid="uid://mcuxct103pk2" path="res://scripts/player/PlayerToolHandler.gd" id="6_p53g4"]
[ext_resource type="Script" uid="uid://d2uxdkssygefw" path="res://scripts/player/PlayerInteraction.gd" id="7_a8unj"]
[ext_resource type="Script" uid="uid://b04nxkb1616uh" path="res://scripts/player/PlayerGridTracker.gd" id="8_774td"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_01bbd"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_6kvam"]
size = Vector3(0.1, 0.1, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3uv8d"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_m56ex"]
size = Vector3(1, 2.04773, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48688, 0)
script = ExtResource("1_16aah")

[node name="farmer" parent="." instance=ExtResource("2_msfty")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.8, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_01bbd")
skeleton = NodePath("../CollisionShape3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.198105, 0.259848, 0.52371)
mesh = SubResource("BoxMesh_6kvam")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.195936, 0.259848, 0.52371)
mesh = SubResource("BoxMesh_6kvam")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.179345)
shape = SubResource("CapsuleShape3D_3uv8d")

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.165048, -0.145238)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.200231, 0.739627)
shape = SubResource("BoxShape3D_m56ex")

[node name="InteractionManager" type="Node3D" parent="."]
script = ExtResource("2_ljt2q")

[node name="InteractionFeedback" parent="." instance=ExtResource("3_sxwei")]

[node name="ToolHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998806, -0.0488498, 0, 0.0488498, 0.998806, -0.821775, 0.111099, 0.144584)

[node name="BackToolHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998806, -0.0488498, 0, 0.0488498, 0.998806, 0.000515923, 0.2192, -0.507139)

[node name="TileHighlighter" parent="." instance=ExtResource("4_pfgso")]

[node name="TileTargetingPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("5_ju8ue")
move_acceleration = 20.0
stop_acceleration = 50.0

[node name="PlayerToolHandler" type="Node" parent="."]
script = ExtResource("6_p53g4")

[node name="PlayerInteraction" type="Node" parent="."]
script = ExtResource("7_a8unj")

[node name="PlayerGridTracker" type="Node" parent="."]
script = ExtResource("8_774td")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
